--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot Watson</title>
 </head>
-<body>  
+<body>
+    <h1>IBM Watson - Everaldo</h1>
+    <p>Clique no botão para começar a conversa!</p>
 </body>
 <script src="script.js"></script>
 </html>
